@@ -565,7 +565,7 @@ command-trade-generation-failed=Trade generation failed.
 command-invalid-item-name=Invalid item name: __1__
 command-mouse-over-hex-core=Mouse over a hex core to use this command.
 operation-on-cooldown=[color=yellow]That operation is on cooldown.[.color] It will be available again in __1__ __plural_for_parameter__1__{1=second|rest=seconds}__.
-no-room-for-item=No room in inventory to insert __1__. It was dropped on the ground instead.
+no-room-for-item=[color=orange]Inventory is full! Only __2__x __1__ was inserted instead of __3__. The rest were dropped on the ground.[.color]
 rewards-while-away=You've been given quest rewards that were acquired by other players while you weren't playing.
 player-trade-ping=__1__ pinged the trade __2__ in the hex core at __3__
 not-on-platform=You're not on a space platform.
