@@ -35,6 +35,7 @@ Date: 21/11/25
     - Fixed crash on running the command /hextorio-debug when in remote view.
     - Fixed that updating the mod settings for planet-based trade productivity bonuses would not take effect without a restart.
     - Fixed floating point rounding errors around 0 for trade productivity.
+    - Fixed that item-giving quests would not drop a remainder of a stack if the inventory is nearly full instead of only dropping entire stacks that wouldn't fit.
   Gui:
     - Trade arrows display nonzero productivity without mousing over them.
     - Softened the white and cyan trade arrow sprites.
